# glfw_opengl_cmake_template

./: .gitignore  CMakeLists.txt
inc/: shader.h  texture.h  utils.h
src/: CMakeLists.txt  main.cpp  shader.cpp  stb_image.cpp  texture.cpp  utils.cpp
